<resources>
    <string name="app_name">EcoProject</string>
    <string name="map">Map</string>
    <string name="article">Articles</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="favorite_articles">Favorite articles</string>
    <string name="favorite_points">Favorite points</string>
    <string name="sms_code">SMS Code</string>
    <string name="verification_code_sent_to_your_phone">Verification code sent to your phone</string>
    <string name="verify">Verify</string>
    <string name="resend_password">Resend password</string>
    <string name="sign_up">Sign up</string>
    <string name="number">Phone</string>
    <string name="password">Password</string>
    <string name="continue_value">Continue</string>
    <string name="sign_in">Sign in</string>
    <string name="title">Title</string>
    <string name="article_text">Article text</string>
    <string name="publish">Publish</string>
    <string name="choose_image">Choose image</string>
    <string name="create_article">Create article</string>
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoiYXJ0ZXJrcmlsb2siLCJhIjoiY2wxMHhvajlqMmhsODNibm1zYTI3cnp5YyJ9.FQhI6OigNDlgg4vL5-KlIA</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_articles">No articles</string>
    <string name="article_image">Article image</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>
    <string name="image_upload_success">Image uploaded</string>
    <string name="permissionsAlertTitle">Not all permissions granted</string>
    <string name="permissionsText">To use this app you need to grant permissions.</string>
    <string name="pick_up_place">Pick up place</string>
    <string name="no_points">No points</string>
    <string name="take_photo">Take photo</string>
    <string name="analyse">Analyse</string>
    <string name="photo_preview">Photo preview</string>
    <string name="no_photo">No photo</string>
    <string name="image_not_taken">Image not taken</string>
    <string name="take_photo_to_use_this_feature">You need to take photo to use this feature</string>
    <string name="analyse_response_title">Analyse result</string>
    <string name="analyse_reponse_message">Garbage type: %1$s</string>
</resources>