<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/create_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/create_article"
        android:textSize="30sp"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_below="@id/create_article">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/article_image_preview"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/title_editor_layout"
        android:layout_marginVertical="16dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_image_preview"
        android:text="@string/choose_image"
        style="@style/Widget.Material3.Button.OutlinedButton"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/article_text_editor_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/publish_button"
        android:layout_below="@id/choose_image"
        android:layout_marginVertical="8dp"
        android:hint="@string/article_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/article_text_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/publish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/publish" />
</RelativeLayout>