<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="24sp"
        tools:text="+99999999999999999999999999" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite_articles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/favorite_articles"
        android:layout_above="@id/favorite_points"
        style="@style/Widget.Material3.Button.OutlinedButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/favorite_points"
        android:layout_above="@id/sign_out"
        android:layout_marginVertical="16dp"
        style="@style/Widget.Material3.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="?attr/colorError"
        android:text="@string/sign_out"
        />


</RelativeLayout>